--- a/app/package.json
+++ b/app/package.json
@@ -9,10 +9,13 @@
   },
   "dependencies": {
     "axios": "^0.26.1",
+    "babel-plugin-component": "^1.1.1",
     "core-js": "^3.8.3",
+    "element-ui": "^2.15.6",
     "less-loader": "^10.2.0",
     "mockjs": "^1.1.0",
     "nprogress": "^0.2.0",
+    "qrcode": "^1.5.0",
     "swiper": "^5.4.5",
     "vue": "^2.6.14",
     "vue-router": "^3.5.3",
